--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": "*"
     },
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": { "rahvusarhiiv\\vauid\\": "" }
     }
