--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "rahvusarhiiv/vauid",
-    "description": "Yii PHP Framework Version 2 - National Archives of Estonia Login Service",
+    "description": "Yii 2 raamistiku laiendus VauID versiooni 2.0 kasutamiseks",
     "type": "yii2-extension",
-    "keywords": ["yii", "login"],
+    "keywords": ["yii", "vau", "login"],
     "license": "MIT",
     "support": {
         "issues": "https://github.com/erikuus/yii2-vauid2-extension/issues",
@@ -11,14 +11,13 @@
     "authors": [
         {
             "name": "Erik Uus",
-            "homepage": "http://www.ra.ee/"
+            "email": "erik.uus@gmail.com"
         }
     ],
     "require": {
         "php": ">=5.4.0",
         "yiisoft/yii2": "*"
     },
-    "minimum-stability": "dev",
     "autoload": {
         "psr-4": { "rahvusarhiiv\\vauid\\": "" }
     }
